# aoc-2021

./: Cargo.toml  LICENSE  input.txt
src/: lib.rs
