[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
bitvec = "0.22.3"
either = "1.6.1"
hex = "0.4.3"
itertools = "0.10.1"
nalgebra = "0.29.0"
petgraph = "0.6.0"
regex = "1.5.4"
rustc-hash = "1.1.0"
tap = "1.0.1"
thiserror = "1.0.30"

[[bin]]
name = "a01"

[[bin]]
name = "a02"

[[bin]]
name = "a03"

[[bin]]
name = "a04"

[[bin]]
name = "a05"

[[bin]]
name = "a06"

[[bin]]
name = "a07"

[[bin]]
name = "a10"

[[bin]]
name = "a11"

[[bin]]
name = "a12"

[[bin]]
name = "a13"

[[bin]]
name = "a14"

[[bin]]
name = "a15"

[[bin]]
name = "a16"

[[bin]]
name = "a17"

[[bin]]
name = "a20"

[[bin]]
name = "a21"

[[bin]]
name = "a22"

[[bin]]
name = "a23"

[[bin]]
name = "a24"

[[bin]]
name = "a25"
